--- a/packages/components/header/_header-white.scss
+++ b/packages/components/header/_header-white.scss
@@ -7,7 +7,7 @@
     color: $color_nhsuk-blue;
   }
 
-  .nhsuk-header__logo-link:hover {
+  .nhsuk-header__service-logo[href]:hover {
     color: $nhsuk-text-color;
 
     .nhsuk-organisation-descriptor {
